.content-block-shadow height overflow fix to 100%

--- a/src/css/page-contents.css
+++ b/src/css/page-contents.css
@@ -73,7 +73,7 @@
 .content-block-shadow {
   box-shadow: 4px 4px #9a8499;
   overflow-y: hidden;
-  height: 400px;
+  height: 100%;
 }
 
 .mobile-content-block-divider {
